--- a/index.html
+++ b/index.html
@@ -1,72 +1,22 @@
 <html>
 
 <head>
-    <link href="css.css" rel="stylesheet" type="text/css">
+    <link href="css.css" type="text/css" rel="stylesheet">
 </head>
 
 <body>
-    <div class="site-menu" id="site-menu">
-        <div class="site-menu-background js-close-menu"></div>
-        <!-- Hamburger menu -->
-        <button class="site-menu-sidebar js-open-menu">
-            <span class="line line-1"></span>
-            <span class="line line-2"></span>
-            <span class="line line-3"></span>
-        </button>
+    <ul>
+        <li>T</li>
+        <li>E</li>
+        <li>A</li>
+        <li>S</li>
+        <li>E</li>
+        <li>R</li>
+    </ul>
 
-        <div class="site-menu-inner">
-            <div class="site-menu-container">
-                <!-- Header Menu-->
-                <div class="site-menu-header">
-                    <span class="site-menu-suptitle">
-                        <span class="text">Navigate to</span>
-                    </span>
-                    <button type="button" class="site-menu-close js-close-menu">
-                        <span class="u-visually-hidden">Close menu</span>
-                        <span class="line line-1"></span>
-                        <span class="line line-2"></span>
-                    </button>
-                </div>
-                <!-- Navigation -->
-                <nav class="site-navigation">
-                    <ul class="site-navigation-list" style="list-style: none;">
-                        <li class="site-navigation-item">
-                            <a class="site-navigation-link " href="#">
-                                <span class="link-text">HOME</span>
-                            </a>
-                        </li>
-                        <li class="site-navigation-item">
-                            <a class="site-navigation-link" href="#">
-                                <span class="link-text">EVENTS</span>
-                            </a>
-                        </li>
-                        <li class="site-navigation-item">
-                            <a class="site-navigation-link" href="#">
-                                <span class="link-text">SCHEDULE</span>
-                            </a>
-                        </li>
-                        <li class="site-navigation-item">
-                            <a class="site-navigation-link" href="#">
-                                <span class="link-text">FAQ</span>
-                            </a>
-                        </li>
-                        <li class="site-navigation-item">
-                            <a class="site-navigation-link " href="#">
-                                <span class="link-text">CONTACT US</span>
-                            </a>
-                        </li>
-                        <li class="site-navigation-item">
-                            <a class="site-navigation-link" href="#">
-                                <span class="link-text">SPONSORS</span>
-                            </a>
-                        </li>
-                    </ul>
-                </nav>
-            </div>
-        </div>
-    </div>
-
-    <script type="text/javascript" src="javascript.js"></script>
+    <a href="">CLICK TO PLAY</a>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/6T8stXj7Dzg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </iframe>
 </body>
 
 </html>
