--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
     </ul>
 
     <a href="">CLICK TO PLAY</a>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/6T8stXj7Dzg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    </iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/60ItHLz5WEA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </body>
 
 </html>
