--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <html>
 
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-159641364-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-159641364-1');
+    </script>
+
     <link href="css.css" type="text/css" rel="stylesheet">
 </head>
 
@@ -15,7 +25,8 @@
     </ul>
 
     <a href="">CLICK TO PLAY</a>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/60ItHLz5WEA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/60ItHLz5WEA" frameborder="0"
+        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </body>
 
 </html>
